the loss function had a bug that was giving nans all the time. instead of (1 - y_true), it was (y_true - 1) which can give a negative number

--- a/ProductClassificationFastText/FastTextTest.ipynb
+++ b/ProductClassificationFastText/FastTextTest.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
     "\n",
     "def euclidean_dist_out_shape(shapes):\n",
     "    shape1, shape2 = shapes\n",
-    "    return (shape1[0], 1)\n",
+    "    return (shape1[0],)\n",
     "\n",
     "def siamese_network(input_shape):\n",
     "    # Defines our inputs\n",
@@ -177,26 +177,47 @@
     "    # The LSTM units\n",
     "    model = tf.keras.Sequential(name='siamese_model')\n",
     "    model.add(LSTM(units=256, return_sequences=True, name='lstm_1'))\n",
-    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(Dropout(rate=0.5))\n",
     "    model.add(LSTM(units=128, return_sequences=True, name='lstm_2'))\n",
-    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(Dropout(rate=0.5))\n",
     "    model.add(LSTM(units=128, name='lstm_3'))\n",
-    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(Dropout(rate=0.5))\n",
     "    \n",
     "    # The dense layers\n",
     "    model.add(Dense(units=1024, activation='relu', name='dense_1'))\n",
-    "    model.add(Dropout(rate=0.3))\n",
+    "    model.add(Dropout(rate=0.5))\n",
     "    model.add(Dense(units=512, activation='relu', name='dense_2'))\n",
     "    \n",
     "    # Forward propagate through the model to generate the encodings\n",
     "    encoded_left_title = model(left_title)\n",
     "    encoded_right_title = model(right_title)\n",
-    "    print(encoded_left_title)\n",
+    "\n",
     "    distance = Lambda(euclidean_distance, output_shape=euclidean_dist_out_shape)([encoded_left_title, encoded_right_title])\n",
     "\n",
     "    # Create and return the network\n",
     "    siamese_net = tf.keras.Model(inputs=(left_title, right_title), outputs=distance, name='siamese_network')\n",
     "    return siamese_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=int32, numpy=array([ 3, 75,  0])>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euclidean_distance([np.array([[4, 5, 6], [5, 6, 7], [11, 234, 12]]), np.array([[5, 6, 7], [10, 11, 12], [11, 234, 12]])])\n",
+    "#np.array([[4, 5, 6], [5, 6, 7]]).shape"
    ]
   },
   {
@@ -328,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,9 +360,12 @@
     "def constrastive_loss(y_true, y_pred):\n",
     "    d = y_pred\n",
     "    d_sqrt = tf.sqrt(d)\n",
-    "\n",
-    "    loss = y_true * d + (y_true - 1) * tf.square(tf.maximum(0., margin - d_sqrt)) \n",
-    "\n",
+    "    #tf.print('\\nY Pred: ', d, 'Shape: ', tf.shape(d))\n",
+    "    #tf.print('\\nY True: ', y_true, 'Shape: ', tf.shape(y_true))\n",
+    "    \n",
+    "    loss = (y_true * d) + ((1 - y_true) * tf.square(tf.maximum(0., margin - d_sqrt)))\n",
+    "    \n",
+    "    #tf.print('\\n Constrastive Loss: ', loss, 'Shape: ', tf.shape(loss))\n",
     "    loss = 0.5 * tf.reduce_mean(loss)\n",
     "    \n",
     "    return loss"
@@ -349,17 +373,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=6.0>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Previous testing code\n",
-    "#constrastive_loss(np.array([[2.0, 3.0, 4.0], [3.0, 4.0, 5.0]], dtype=np.float32), np.array([[3, 4, 5], [4, 5, 6]], dtype=np.float32), 0)"
+    "constrastive_loss(np.array([1, 0, 0], dtype=np.float32), np.array([0, 0, 1], dtype=np.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,26 +477,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"siamese_model_4/Identity:0\", shape=(None, 512), dtype=float32)\n",
       "Model: \"siamese_network\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_5 (InputLayer)            [(None, 42, 300)]    0                                            \n",
+      "input_49 (InputLayer)           [(None, 42, 300)]    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_6 (InputLayer)            [(None, 42, 300)]    0                                            \n",
+      "input_50 (InputLayer)           [(None, 42, 300)]    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "siamese_model (Sequential)      (None, 512)          1555968     input_5[0][0]                    \n",
-      "                                                                 input_6[0][0]                    \n",
+      "siamese_model (Sequential)      (None, 512)          1555968     input_49[0][0]                   \n",
+      "                                                                 input_50[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "lambda_2 (Lambda)               (None,)              0           siamese_model[0][0]              \n",
+      "lambda_24 (Lambda)              (None,)              0           siamese_model[0][0]              \n",
       "                                                                 siamese_model[1][0]              \n",
       "==================================================================================================\n",
       "Total params: 1,555,968\n",
@@ -478,16 +512,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"lambda_2_target_2:0\", shape=(None,), dtype=float32) Tensor(\"lambda_2/Identity:0\", shape=(None,), dtype=float32)\n"
-     ]
-    },
     {
      "ename": "MemoryError",
      "evalue": "Unable to allocate 4.69 GiB for an array with shape (50000, 42, 300) and data type float64",
@@ -495,7 +522,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-3c47d346930f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconstrastive_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'adam'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'accuracy'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconstrastive_accuracy\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX_train1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX_val\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_val\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-128-f288124d59d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mopt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconstrastive_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mopt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'accuracy'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconstrastive_accuracy\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX_train1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m32\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX_val\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_val\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\miniconda3\\envs\\tf2\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    817\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    818\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 819\u001b[1;33m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    820\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    821\u001b[0m   def evaluate(self,\n",
       "\u001b[1;32m~\\miniconda3\\envs\\tf2\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_v2.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, model, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    233\u001b[0m           \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    234\u001b[0m           \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 235\u001b[1;33m           use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    236\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m       \u001b[0mtotal_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_total_number_of_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_data_adapter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\miniconda3\\envs\\tf2\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_v2.py\u001b[0m in \u001b[0;36m_process_training_inputs\u001b[1;34m(model, x, y, batch_size, epochs, sample_weights, class_weights, steps_per_epoch, validation_split, validation_data, validation_steps, shuffle, distribution_strategy, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m    591\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    592\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 593\u001b[1;33m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    594\u001b[0m     \u001b[0mval_adapter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    595\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -515,47 +542,21 @@
     }
    ],
    "source": [
-    "model.compile(loss=constrastive_loss, optimizer='adam', metrics=['accuracy', constrastive_accuracy])\n",
-    "model.fit(x=[X_train1, X_train2], y=Y_train, batch_size=64, epochs=2, validation_data=([X_val[0], X_val[1]], Y_val))"
+    "lr = 0.001\n",
+    "opt = tf.keras.optimizers.Adam(learning_rate=lr)\n",
+    "model.compile(loss=constrastive_loss, optimizer=opt, metrics=['accuracy', constrastive_accuracy])\n",
+    "model.fit(x=[X_train1, X_train2], y=Y_train, batch_size=32, epochs=2, validation_data=([X_val[0], X_val[1]], Y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9461/9461 [==============================] - 26s 3ms/sample - loss: nan - accuracy: 1.0000 - constrastive_accuracy: 1.0000\n",
-      "test loss, test acc:  [nan, 1.0, 1.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = model.evaluate([X_test1, X_test2], Y_test, batch_size=64)\n",
     "print('test loss, test acc: ', results)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-c2b504cfe544>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
